2008-05-21  Jim Evins  <evins@snaught.com>

	* src/glabels-batch.c: (main):
		Bug #1968653.  Initialize prefs subsystem.

2008-05-09  Jim Evins  <evins@snaught.com>

	* data/glade/object-editor.glade:
		Bug #1959135.  A couple of radio buttons somehow became
		ungrouped.

2008-04-04  Jim Evins  <evins@snaught.com>

	* data/templates/brother-other-templates.xml:
		Added categories to existing templates.
	* data/templates/misc-other-templates.xml:
		Moved dymo templates to their own file.
	* data/templates/Makefile.am:
	* data/templates/dymo-other-templates.xml:
		Additional dymo templates provided by Harald Welte <laforge@gnumonks.org>.
	* AUTHORS:
		Acknowledgement for above templates.

2008-03-24  Jim Evins  <evins@snaught.com>

	* src/xml-label.c: (xml_doc_to_label):
		Bug #1872584.  Don't refuse to parse label file if namespace is
		unrecognized -- it may be from a newer version of glabels.
	
2008-03-15  Jim Evins  <evins@snaught.com>

	* data/templates/Makefile.am:
	* data/templates/brother-other-templates.xml:
		Added brother templates.
	* src/cairo-markup-path.c: (gl_cairo_markup_margin_rect_path),
	(gl_cairo_markup_margin_cd_path):
	* src/view.c: (draw_markup_layer):
		Fixed markup drawing errors when label is rotated.

2008-03-03  Jim Evins  <evins@snaught.com>

	* configure.in:
	* ko.po:
		Added korean translation provided by xein@naver.com.
	
2008-02-21  Jim Evins  <evins@snaught.com>

	* src/ui.c:
		Last minute bug fix for 2.2.2 release.
		Fixed typo that prevented "Save" from being deactivated when
		document is not modified.

2008-02-21  Jim Evins  <evins@snaught.com>

	* NEWS:
	* configure.in:
		Prepare for 2.2.2 release.

2008-02-18  Jim Evins  <evins@snaught.com>

	* src/prefs-model.c: (gl_prefs_model_save_settings),
	(gl_prefs_model_load_settings):
		Set default units for file output.

2008-02-18  Jim Evins  <evins@snaught.com>

	* help/C/glabels.xml:
		Fixed example template.

2008-02-16  Jim Evins  <evins@snaught.com>

	* AUTHORS: